--- a/app/src/main/res/layout/container.xml
+++ b/app/src/main/res/layout/container.xml
@@ -9,31 +9,38 @@
         android:background="@android:color/transparent"
         android:padding="5dp"
     >
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:scaleType="fitXY"
-        android:padding="5dp"
-        android:contentDescription="Loading"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/border"
-        android:id="@+id/imgMap"/>
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
-        android:indeterminate="true" />
+        <RelativeLayout
+            android:id="@+id/image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:scaleType="fitXY"
+                android:padding="5dp"
+                android:contentDescription="Loading"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/border"
+                android:id="@+id/imgMap"/>
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
+                android:indeterminate="true" />
+        </RelativeLayout>
     <TextView
         android:id="@+id/imgMapDescription"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/imgMap"
+        android:layout_height="100dp"
+        android:layout_below="@id/image_view"
         android:layout_gravity="center"
+        android:textColor="@android:color/black"
         android:layout_marginTop="15dp"
         android:background="@drawable/border"
         android:gravity="center"
+        android:padding="2dp"
          />
 </RelativeLayout>
 </ScrollView>
