--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -4,7 +4,7 @@
         android:radius="0dp"
         />
     <solid
-        android:color="#edff00"
+        android:color="#0AA0D9"
         />
     <padding
         android:left="0dp"
@@ -18,6 +18,6 @@
         />
     <stroke
         android:width="3dp"
-        android:color="#edff00"
+        android:color="#0AA0D9"
         />
 </shape>
