--- a/app/src/main/res/layout/fragment_office.xml
+++ b/app/src/main/res/layout/fragment_office.xml
@@ -10,6 +10,12 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/officeGallery"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <com.viewpagerindicator.UnderlinePageIndicator
+        android:id="@+id/officeGalleryIndicator"
+        android:layout_width="fill_parent"
+        android:layout_height="5dp" />
 
 </LinearLayout>
