--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -2,7 +2,9 @@
 <shape
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle">
-<stroke android:width="2dp" android:color="#d3d3d3" />
+<stroke android:width="2dp" android:color="#D7D1CA" />
 <solid android:color="@android:color/white"></solid>
 
 </shape>
+
+    <!--GREY :d3d3d3  -->
